# visual-odometry

./: .gitignore  CMakeLists.txt  parameters.txt  pointclould.pcd  pointclould_unfiltered.pcd  test
include/: utility.h
result/pitch/: d1_d2  d1_d3  d1_d4  d2_d3  d2_d4  d3_d4
result/raw/: d1_44_d2_41  d1_d2  d1_d3  d1_d4  d2_d3  d2_d4  d3_d4
result/rot/: d1_d3  d1_d4
result/trans/: v1_v2  v1_v3  v1_v4  v2_v3  v2_v4  v3_v4
src/: CMakeLists.txt  incParameter.cpp  main.cpp  measureTwo.cpp  pointClould.cpp  utility.cpp  vo.cpp
